<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="_0">0</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="x">xⁿ</string>
    <string name="sqrt">√</string>
    <string name="factorial">!</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">÷</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">x</string>
    <string name="c">c</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="subtract">-</string>
    <string name="_00">00</string>
    <string name="decimal">.</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
</resources>